Added index.html and New Positive plot

--- a/regional_data.html
+++ b/regional_data.html
@@ -12,6 +12,7 @@
             
         </select>
         <div id="TotalCase" ></div> 
-        <div id="ActiveCase"></div> 
+        <div id="ActiveCase"></div>
+        <div id="NewPositive"></div>
     </body>
 </html>
