Aggiunti grafici per nuovi contagi e per decessi

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
           <div class="col-sm" id='TotalCase'></div>
           <div class="col-sm" id='ActiveCase'></div>
         </div>
+        <div class="row">
+          <div class="col-sm" id='NewPositive'></div>
+          <div class="col-sm" id='Decessi'></div>
+        </div>
       </div>
   </body>
 </html>
