Updated title of index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script defer src="script_region.js" charset="utf8"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <title>Hello, world!</title>
+    <title>COVID-19 Regional Data</title>
   </head>
   <body>
     <h1>COVID-19 Regional Data</h1>
