Added New test numbers and new cases vs. test numbers

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
           <div class="col-sm" id='NewPositive'></div>
           <div class="col-sm" id='Decessi'></div>
         </div>
+        <div class="row">
+          <div class="col-sm" id="Tamponi"></div>
+          <div class="col-sm" id="Tamponi_day"></div>
+        </div>
       </div>
   </body>
 </html>
