Added Historical Data

--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
       <h1>COVID-19 Italian Data</h1>
     </div>
     <div class="container">
-        <div class="row">
+        <div class="row">   
           <div class="col-sm" id='Selector'>    
-            <select id='region'></select>
-          </div>
+          <select id='region'></select>
+        </div>
+      </div>
+        <div class="row">
+          <div class="col-sm" id='HistoricalData'></div>
           <div class="col-sm" id='KPI'></div>
         </div>
         <div class="row">
