Added Death rate and Incidence rate plot

--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
         </div>
         <div class="row">
           <div class="col-sm" id='NewPositive'></div>
-          <div class="col-sm" id='Decessi'></div>
+          <div class="col-sm" id="IncidenceRate"></div>
         </div>
         <div class="row">
           <div class="col-sm" id="Tamponi"></div>
           <div class="col-sm" id="Tamponi_day"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm" id='Decessi'></div>
+          <div class="col-sm" id="DeathRate"></div>
         </div>
       </div>
   </body>
